# matrix-calculation-accelerator

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: clang-format.yml  cmake-multi-platform.yml  codecov-action.yml  codecov-on-develop.yml  codecov-on-master.yml  codecov.yml
doc/en/: CHANGE_LOG.md
doc/en/developer/: codeSubmit.md  codeWrite.md  index.md  projectBuild.md
doc/en/user/: buildAndInstall.md  diag.md  identityMatrix.md  index.md  matrix.md  mca.md  mcaConfig.md  shape.md
example/: matrix_construction.cpp  matrix_iteration.cpp  matrix_iterator.cpp  matrix_operation.cpp  matrix_other.cpp  mca_examples.cpp
example/include/: example_utility.h
src/: mca.cpp  mca_config.cpp  thread_pool.cpp
src/include/: diag.h  identity_matrix.h  matrix.h  matrix_declaration.h  mca.h  mca_config.h  mca_private.h  shape.h  single_thread_matrix_calculation.h  thread_pool.h
src/include/mca/: diag.h  identity_matrix.h  matrix.h  mca.h  mca_config.h  shape.h
src/include/mca/__mca_internal/: calculation_task_num.h  matrix_declaration.h  single_thread_matrix_calculation.h  thread_pool.h  utility.h
test/: CMakeLists.txt
test/src/: different_type_test.cpp  matrix_test.cpp  mca_test.cpp  multi_thread_matrix_calculation_test.cpp  multi_thread_matrix_test.cpp  same_address_test.cpp  single_thread_matrix_calculation_test.cpp  thread_pool_test.cpp
